# tour

./: Cargo.toml  LICENSE  README.md
docs/: design.md
example/: Cargo.toml
example/src/: layout.html  main.html  main.rs  root.html
examples/dynamic/: Cargo.toml
examples/dynamic/src/: layout.html  main.html  main.rs
extra/partial-compile/: Cargo.toml
extra/partial-compile/src/: main.rs  parser.rs  token.rs
tour/: Cargo.toml
tour-core/: Cargo.toml
tour-core/src/: error.rs  lib.rs  parser.rs  render.rs  spec.rs  syn.rs  syntax.rs  template.rs  tokenizer.rs  visitor.rs
tour-core/src/parser/: mod.rs  span.rs  token.rs
tour-macros/: Cargo.toml
tour-macros/src/: attribute.rs  codegen.rs  common.rs  config.rs  data.rs  lib.rs  parser.rs  shared.rs  sizehint.rs  syntax.rs  template.rs  template_v2.rs  visitor.rs
tour-parser/: Cargo.toml
tour-parser/src/: ast.rs  attribute.rs  codegen.rs  common.rs  config.rs  data.rs  file.rs  lib.rs  metadata.rs  parser.rs  parser_v2.rs  syntax.rs  template.rs  token.rs  visitor.rs
tour-parser/src/codegen/: body.rs  sizehint.rs
tour-parser/src/data/: validate.rs
tour-parser/src/file/: validate.rs  visitor.rs
tour-parser/src/metadata/: attribute.rs
tour/src/: display.rs  error.rs  lib.rs  render.rs  template.rs  time.rs  write.rs
tour/tests/: basic.html  basic.rs  block.rs  import.rs  layout.rs  layout1.html  layout2.html  layout3.html  nested_layout.rs
tour/tests/block/: block.html
tour/tests/import/: alias.html  block.html
tour/tests/layout/: base.html  import.html  layout1.html  layout2.html  layout3.html
tour/tests/partials/: nav.html
