[package]
name = "tour-core"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro2 = { version = "1.0.93", optional = true }
quote = { version = "1.0.38", optional = true }
syn = { version = "2.0.98", features = ["extra-traits", "full"], optional = true }

[features]
default = []
full = ["syn"]
syn = ["dep:syn","dep:quote","dep:proc-macro2"]

