[package]
name = "tour-core"
description = "Rust Compile-time Templating with Runtime Reload"
documentation = "https://docs.rs/tour-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

