[package]
name = "tour-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.98", features = ["full"] }
tour-core = { version = "0.1.0", path = "../tour-core" }

[features]
default = ["dev-reload"]

# reload default to debug_assertions
dev-reload = []
