[package]
name = "tour-parser"
description = "Tour Template Parser"
documentation = "https://docs.rs/tour-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.98", features = ["full"] }
tour-core = { version = "0.1.0", path = "../tour-core" }

[features]
default = ["dev-reload"]

# reload default to debug_assertions
dev-reload = []
