[package]
name = "tour-parser"
description = "Tour Template Parser"
documentation = "https://docs.rs/tour-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
tour-core = { path = "../tour-core" }

[features]
default = ["dev-reload"]

# reload default to debug_assertions
dev-reload = []
