[package]
name = "tour"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
itoa = "1.0.15"
tour-macros = { version = "0.1.0", path = "../tour-macros" }
tour-core = { version = "0.1.0", path = "../tour-core" }

[features]
default = ["dev-reload"]

# reload default to debug_assertions
dev-reload = ["tour-macros/dev-reload"]
