[package]
name = "tour"
description = "Rust Compile-time Templating with Runtime Reload"
documentation = "https://docs.rs/tour"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bytes = "1.10.1"
itoa = "1.0.15"
tour-macros = { path = "../tour-macros", version = "0.1.0" }
tour-core = { path = "../tour-core", version = "0.1.0" }
time = { version = "0.3.41", features = ["formatting"], optional = true }

[features]
default = ["dev-reload"]

# reload default to debug_assertions
dev-reload = ["tour-macros/dev-reload"]
time = ["dep:time"]
